--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qrk (0.16.0523-1) xenial; urgency=medium
+
+  * Imported Upstream version 0.16.0523
+  * Remove upstreamed patches
+
+ -- Florian Preinstorfer <nblock@archlinux.us>  Mon, 23 May 2016 22:36:08 +0200
+
 qrk (0.16.0517-1) xenial; urgency=medium
 
   * Add my keyid
